--- a/all-good-studio/src/components/Header/Header.module.scss
+++ b/all-good-studio/src/components/Header/Header.module.scss
@@ -18,7 +18,7 @@
   }
 
   &.lightHeader {
-    background: var(--light-header-bg);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
     color: var(--dark) !important;
 
     .navDesktop {
@@ -29,7 +29,7 @@
   }
 
   &.darkHeader {
-    background: var(--dark-header-bg);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
     color: var(--light) !important;
 
     .navDesktop {
