--- a/all-good-studio/src/pages/Home/comparison-section.module.scss
+++ b/all-good-studio/src/pages/Home/comparison-section.module.scss
@@ -96,11 +96,11 @@
       .comparisonRow {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: var(--dark-transparent-70);
         border-radius: 5px;
 
         @media (min-width: 992px) {
-          background-color: rgba(0, 0, 0, 0.5);
+          background-color: var(--dark-transparent-50);
           width: 80%;
         }
 
