--- a/all-good-studio/src/pages/Home/faq-section.module.scss
+++ b/all-good-studio/src/pages/Home/faq-section.module.scss
@@ -71,7 +71,7 @@
       box-shadow: none;
       border-radius: 0;
       margin-bottom: 40px;
-      border-bottom: 1px solid rgba(217, 217, 217, 0.7);
+      border-bottom: 1px solid var(--light-border);
 
       &:before {
         display: none;
