--- a/all-good-studio/src/styles/abstracts/_variables.scss
+++ b/all-good-studio/src/styles/abstracts/_variables.scss
@@ -11,63 +11,54 @@
   --2xl: 1600px;
 
   /* Colors */
-  --color-primary: #00dc72;
-  --color-primary-100: #009C51;
-
   --light: #ffffff;
   --dark: #000000;
+  
+  --color-primary: #00dc72;
+  --color-primary-100: #009C51;
   
   --black-50: #f5f5f5;
   --black-100: #f0f0f0;
   --black-150: #f1f1f1;
   --black-175: #f3f6f4;
   --black-200: #e0e0e0;
+  --black-225: #d5f1e4;
+  --black-250: #d3d3d3;
   --black-300: #c2c2c2;
   --black-400: #a6a6a6;
+  --black-450: #909090;
   --black-500: #878787;
   --black-550: #7e7e7e;
   --black-600: #626262;
   --black-700: #454545;
+  --black-750: #2f3130;
   --black-800: #2c2c2c;
   --black-900: #1a1a1a;
 
-  // --gray-100: #f7fafc;
-  // --gray-200: #edf2f7;
-  // --gray-300: #e2e8f0;
-  // --gray-400: #cbd5e0;
-  // --gray-500: #a0aec0;
-  // --gray-600: #718096;
-  // --gray-700: #4a5568;
-  // --gray-800: #2d3748;
-  // --gray-900: #1a202c;
+  /* Greens */
+  --color-green-100: #d5f5e3;
+  --color-green-150: #a5d6c2;
+  --color-green-200: #55ffa3;
+  --color-green-300: #4affaa;
+  --color-green-400: #49635c;
+  --color-green-500: #02341c;
+  --color-green-600: #059669;
 
-  // --green-100: #e6fffa;
-  // --green-200: #b2f5ea;
-  // --green-300: #81e6d9;
-  // --green-400: #4fd1c5;
-  // --green-500: #38b2ac;
-  // --green-600: #319795;
-  // --green-700: #2c7a7b;
-  // --green-800: #285e61;
-  // --green-900: #234e52;
+  
+  --light-transparent-0: rgba(255, 255, 255, 0);
+  --light-transparent-20: rgba(255, 255, 255, 0.2);
+  --light-transparent-100: rgba(255, 255, 255, 1);
+  
+  --light-shadow: rgba(175, 175, 175, 0.5);
 
-  // --red-100: #fff5f5;
-  // --red-200: #fed7d7;
-  // --red-300: #feb2b2;
-  // --red-400: #fc8181;
-  // --red-500: #f56565;
-  // --red-600: #e53e3e;
-  // --red-700: #c53030;
-  // --red-800: #9b2c2c;
-  // --red-900: #742a2a;
+  --light-border: rgba(217, 217, 217, 0.7);
 
-  // --blue-100: #ebf8ff;
-  // --blue-200: #bee3f8;
-  // --blue-300: #90cdf4;
-  // --blue-400: #63b3ed;
-  // --blue-500: #4299e1;
-  // --blue-600: #3182ce;
-  // --blue-700: #2b6cb0;
-  // --blue-800: #2c5282;
-  // --blue-900: #2a4365;
+  --dark-transparent-0: rgba(0, 0, 0, 0);
+  --dark-transparent-30: rgba(0, 0, 0, 0.3);
+  --dark-transparent-50: rgba(0, 0, 0, 0.5);
+  --dark-transparent-70: rgba(0, 0, 0, 0.7);
+  --dark-transparent-100: rgba(0, 0, 0, 1);
+
+  
+
 }
