--- a/all-good-studio/src/ags-components/Container/Container.module.scss
+++ b/all-good-studio/src/ags-components/Container/Container.module.scss
@@ -1,9 +1,9 @@
-@use '@/styles/abstracts/mixins';
-@use '@/styles/abstracts/variables';
+@use "@/styles/abstracts/mixins";
+@use "@/styles/abstracts/variables";
 
 .container {
   width: 100%;
-  padding: 0 30px;
+  padding: 0 30px !important;
   margin: 0 auto;
 
   @media (min-width: 576px) {
@@ -13,19 +13,19 @@
   @media (min-width: 768px) {
     max-width: 720px;
   }
-  
+
   @media (min-width: 992px) {
     max-width: 960px;
   }
-  
+
   @media (min-width: 1200px) {
     max-width: 1140px;
   }
-  
+
   @media (min-width: 1400px) {
     max-width: 1320px;
   }
-  
+
   @media (min-width: 1600px) {
     max-width: 1470px;
   }
