--- a/all-good-studio/src/pages/Home/hero-section.module.scss
+++ b/all-good-studio/src/pages/Home/hero-section.module.scss
@@ -1,5 +1,5 @@
-@use '@/styles/abstracts/mixins';
-@use '@/styles/abstracts/variables';
+@use "@/styles/abstracts/mixins";
+@use "@/styles/abstracts/variables";
 
 .heroSection {
   position: relative;
@@ -14,6 +14,15 @@
 
   @media (min-width: 1600px) {
     padding: 200px 0;
+  }
+
+  .auroraContainer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 1;
   }
 
   .heroWrapper {
@@ -85,7 +94,7 @@
       .heroDescription {
         font-size: 12px;
         line-height: 16px;
-        margin-bottom: 24px;
+        margin-bottom: 40px;
 
         @media (min-width: 768px) {
           font-size: 14px;
@@ -100,13 +109,11 @@
         @media (min-width: 1200px) {
           font-size: 20px;
           line-height: 26px;
-          margin-bottom: 30px;
         }
 
         @media (min-width: 1600px) {
           font-size: 24px;
           line-height: 33px;
-          margin-bottom: 36px;
         }
       }
     }
@@ -171,20 +178,20 @@
       }
 
       @media (min-width: 768px) {
-        font-size: 14px;
+        font-size: 15px;
       }
 
       @media (min-width: 992px) {
-        font-size: 18px;
+        // font-size: 18px;
       }
 
       @media (min-width: 1200px) {
-        font-size: 21px;
+        // font-size: 21px;
         margin-top: 30px;
       }
 
       @media (min-width: 1600px) {
-        font-size: 24px;
+        // font-size: 24px;
         margin-top: 36px;
       }
     }
