--- a/all-good-studio/src/pages/Home/result-section.module.scss
+++ b/all-good-studio/src/pages/Home/result-section.module.scss
@@ -1,5 +1,5 @@
-@use '@/styles/abstracts/mixins';
-@use '@/styles/abstracts/variables';
+@use "@/styles/abstracts/mixins";
+@use "@/styles/abstracts/variables";
 
 .resultSection {
   background-color: var(--light);
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 
     @media (min-width: 576px) {
       flex-direction: row;
@@ -125,9 +125,13 @@
         }
 
         @media (min-width: 1200px) {
-          font-size: 100px;
+          font-size: 90px;
           height: 125px;
           line-height: 125px;
+        }
+
+        @media (min-width: 1400px) {
+          font-size: 100px;
         }
       }
     }
@@ -148,12 +152,16 @@
   .suffix {
     font-size: 50px;
     color: var(--color-primary);
-    
+
     @media (min-width: 768px) {
       font-size: 60px;
     }
 
     @media (min-width: 1200px) {
+      font-size: 90px;
+    }
+
+    @media (min-width: 1400px) {
       font-size: 100px;
     }
   }
@@ -171,8 +179,4 @@
       font-size: 24px;
     }
   }
-}
-
-.logoCarousel {
-  padding-top: 10%;
 }
