--- a/all-good-studio/src/pages/Home/testimonial-section.module.scss
+++ b/all-good-studio/src/pages/Home/testimonial-section.module.scss
@@ -1,5 +1,5 @@
-@use '@/styles/abstracts/mixins';
-@use '@/styles/abstracts/variables';
+@use "@/styles/abstracts/mixins";
+@use "@/styles/abstracts/variables";
 
 .testimonialSection {
   background-color: var(--light);
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 30px;
-    margin-bottom: 16px;
+    margin-bottom: 40px;
 
     @media (min-width: 992px) {
       flex-direction: row;
@@ -23,7 +23,7 @@
     }
 
     @media (min-width: 1200px) {
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
   }
 
@@ -130,7 +130,7 @@
     .cardGrid {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 20px;
+      gap: 10px 0;
       transition: max-height 0.5s ease;
 
       @media (min-width: 576px) {
@@ -143,114 +143,139 @@
     }
 
     .testiCard {
-      background: var(--black-175);
-      border-radius: 10px;
-      padding: 30px;
-      opacity: 1;
-      transition: all 0.5s ease-in-out;
+      padding: 20px;
+      min-height: 560px;
+      width: 100%;
 
-      &:hover {
-        transform: scale(1.03);
+      @media (min-width: 576px) {
+        min-height: 520px;
+        width: 240px;
+      }
 
-        .detWrapper {
-          .readLink {
-            color: var(--color-primary-100);
+      @media (min-width: 768px) {
+        min-height: 485px;
+        width: 320px;
+      }
+
+      @media (min-width: 992px) {
+        min-height: 490px;
+        width: 300px;
+      }
+
+      @media (min-width: 1200px) {
+        min-height: 500px;
+        width: 360px;
+      }
+
+      @media (min-width: 1400px) {
+        min-height: 480px;
+        width: 420px;
+      }
+
+      @media (min-width: 1600px) {
+        min-height: 500px;
+        width: 470px;
+      }
+
+      .testiCardContent {
+        border-radius: 10px;
+        margin: auto;
+        background-color: var(--black-175);
+        padding: 30px;
+
+        .tag {
+          display: inline-block;
+          border-radius: 10px;
+          background-color: var(--light);
+          font-size: 14px;
+          font-weight: 500;
+          padding: 5px 10px;
+          color: var(--color-primary-100);
+        }
+
+        .authorName {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          margin: 20px 0;
+
+          .authorImg {
+            width: 34px;
+            height: 34px;
+            border-radius: 50%;
+            overflow: hidden;
+          }
+
+          h3 {
+            font-size: 18px;
+            font-weight: 500;
+            font-family: var(--font);
           }
         }
-      }
 
-      .tag {
-        display: inline-block;
-        border-radius: 10px;
-        background-color: var(--light);
-        font-size: 14px;
-        font-weight: 500;
-        padding: 5px 10px;
-        color: var(--color-primary-100);
-      }
-
-      .authorName {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        margin: 20px 0;
-
-        .authorImg {
-          width: 34px;
-          height: 34px;
-          border-radius: 50%;
-          overflow: hidden;
-        }
-
-        h3 {
-          font-size: 18px;
-          font-weight: 500;
+        h4 {
           font-family: var(--font);
-        }
-      }
-
-      h4 {
-        font-family: var(--font);
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 25px;
-
-        @media (min-width: 992px) {
-          font-size: 24px;
-        }
-      }
-
-      p {
-        font-family: var(--font);
-        font-size: 14px;
-        line-height: 25px;
-        margin-bottom: 20px;
-      }
-
-      .testiImg {
-        border-radius: 10px;
-        overflow: hidden;
-      }
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-      .detWrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        gap: 10px;
-        margin-top: 20px;
-
-        @media (min-width: 1200px) {
-          flex-direction: row;
-        }
-
-        .percentTag {
-          background-color: var(--light);
-          padding: 6px 20px;
           font-size: 18px;
           font-weight: 500;
           line-height: 25px;
-          border-radius: 30px;
+
+          @media (min-width: 992px) {
+            font-size: 24px;
+          }
         }
 
-        .readLink {
-          color: var(--dark);
+        p {
           font-family: var(--font);
-          font-size: 16px;
-          font-weight: 500;
-          text-decoration: underline;
-          text-transform: none;
-          padding: 0;
-          transition: all 0.3s ease-in-out;
+          font-size: 14px;
+          line-height: 25px;
+          margin-bottom: 20px;
+        }
 
-          &:hover {
-            background-color: transparent;
+        .testiImg {
+          border-radius: 10px;
+          overflow: hidden;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        .detWrapper {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          gap: 10px;
+          margin-top: 20px;
+
+          @media (min-width: 1200px) {
+            flex-direction: row;
+          }
+
+          .percentTag {
+            background-color: var(--light);
+            padding: 6px 20px;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 25px;
+            border-radius: 30px;
+          }
+
+          .readLink {
+            color: var(--dark);
+            font-family: var(--font);
+            font-size: 16px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: none;
+            padding: 0;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+              background-color: transparent;
+            }
           }
         }
       }
