--- a/all-good-studio/src/components/TiltedCard.css
+++ b/all-good-studio/src/components/TiltedCard.css
@@ -29,6 +29,8 @@
 .tilted-card-inner {
   position: relative;
   transform-style: preserve-3d;
+  box-shadow: none;
+  border: 0;
 }
 
 .tilted-card-img {
