--- a/all-good-studio/src/pages/Home/project-section.module.scss
+++ b/all-good-studio/src/pages/Home/project-section.module.scss
@@ -2,10 +2,10 @@
   background: var(--dark) url("/images/background/portfolio-bg.svg") no-repeat
     scroll right top;
   background-size: cover;
-  padding: 10% 0 25%;
+  padding: 200px 0;
 
-  @media (min-width: 1600px) {
-    padding: 200px 0;
+  @media (min-width: 768px) {
+    padding: 200px 0 25%;
   }
 }
 
@@ -15,8 +15,8 @@
   .projectTitle {
     font-size: 32px;
     line-height: 1;
-    overflow: hidden;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin-bottom: 30px;
     color: var(--light);
 
