animation changes updated

--- a/all-good-studio/src/pages/Casestudy/casestudy.module.scss
+++ b/all-good-studio/src/pages/Casestudy/casestudy.module.scss
@@ -3,7 +3,8 @@
 
 .caseStudyWrapper {
   padding: 80px 0;
-  background: var(--light) url("/images/background/portfolio-page-bg.png") no-repeat fixed top right;
+  background: var(--light) url("/images/background/portfolio-page-bg.png")
+    no-repeat fixed top right;
   background-size: 100%;
 
   .sectionWrapper {
@@ -44,17 +45,33 @@
 
         h1 {
           font-family: var(--font);
-          font-size: 40px;
+          font-size: 30px;
           line-height: 30px;
           font-weight: 600;
           margin-bottom: 40px;
 
+          @media (min-width: 576px) {
+            font-size: 48px;
+          }
+
           @media (min-width: 768px) {
-            font-size: 60px;
-            line-height: 50px;
+            font-size: 40px;
+          }
+
+          @media (min-width: 992px) {
+            font-size: 50px;
           }
 
           @media (min-width: 1200px) {
+            font-size: 54px;
+            line-height: 50px;
+          }
+
+          @media (min-width: 1400px) {
+            font-size: 70px;
+          }
+
+          @media (min-width: 1600px) {
             font-size: 80px;
             line-height: 70px;
           }
