--- a/all-good-studio/src/ags-components/Button/Button.module.scss
+++ b/all-good-studio/src/ags-components/Button/Button.module.scss
@@ -11,14 +11,23 @@
     text-transform: none;
     text-decoration: none;
     position: relative;
-    padding: 10px 20px;
+    padding: 15px 35px;
     box-shadow: none;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 500;
     line-height: 1;
     font-family: var(--font);
     box-shadow: none;
     transition: all 0.3s ease;
+    gap: 10px;
+
+    @media (min-width: 1200px) {
+      font-size: 20px;
+    }
+
+    @media (min-width: 1600px) {
+      font-size: 24px;
+    }
 
     &:hover {
       box-shadow: none;
