--- a/all-good-studio/src/pages/Home/portfolio-carousel.scss
+++ b/all-good-studio/src/pages/Home/portfolio-carousel.scss
@@ -6,11 +6,33 @@
 .portfolio-card {
   position: sticky;
   top: 90px;
-  // height: calc(100vh - 120px);
-  height: calc(100vh - 240px);
+  height: 400px;
   opacity: 0.9;
   transition: transform 0.3s ease, opacity 0.3s ease;
   margin: auto;
+
+  @media (min-width: 576px) {
+    height: 450px;
+  }
+
+  @media (min-width: 768px) {
+    height: 500px;
+  }
+
+  @media (min-width: 992px) {
+    height: 70vh;
+    min-height: 600px;
+  }
+
+  @media (min-width: 1200px) {
+    height: 75vh;
+    min-height: 650px;
+  }
+
+  @media (min-width: 1400px) {
+    height: 80vh;
+    min-height: 700px;
+  }
 
   &:nth-child(1) {
     width: calc(100% - 40px);
