images border removed

--- a/all-good-studio/src/styles/styles.scss
+++ b/all-good-studio/src/styles/styles.scss
@@ -118,6 +118,10 @@ button {
   padding: 20px;
   overflow: hidden;
 
+  .tilted-card-img {
+    display: none;
+  }
+
   .tilted-card-overlay {
     width: 100%;
   }
